tests/expectations/parser/program/circuit_deprecated_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', '}' -- found 'circuit'
    --> test:5:5
     |
   5 |     circuit Foo {
     |     ^^^^^^^"""]
